# RXFG-RXSR

./: CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  CODING_STANDARD.md  MILESTONE_V0_1.md  MODULES.md  PRODUCT_REQUIREMENTS.md  QT_UI_ROADMAP.md  ROADMAP.md  RXFG_SPEC.md  RXSR_SPEC.md  TECHNICAL_DEBT_RULES.md  UI_ARCHITECTURE.md  UI_WIREFRAMES.md
include/core/: EventBus.hpp
include/logging/: Logger.hpp
include/monitoring/: Metric.hpp  MonitoringManager.hpp
include/settings/: SettingsManager.hpp
qml/: Main.qml
src/app/: main.cpp
src/core/: EventBus.cpp
src/logging/: Logger.cpp
src/monitoring/: MonitoringManager.cpp  RegisterDefaultMetrics.cpp
src/settings/: SettingsManager.cpp
